--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: rocket_chat_connector_flutter
 description: Flutter Rocket.chat connector. This library is developed to allow the use of a Rocket.chat server as a messaging system.
 author: Sebastien Dugene <sebastien.dugene@gmail.com>
 homepage: https://github.com/sdugene/rocket-chat-connector-flutter
-version: 0.0.8
+version: 0.0.9
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -13,9 +13,9 @@ dependencies:
   #https://pub.dev/packages/collection#-changelog-tab-
   collection: ^1.14.11
   #https://pub.dev/packages/http_middleware#-changelog-tab-
-  http_middleware: ^1.0.0
+  http_middleware: any
   #https://pub.dev/packages/http_logger#-changelog-tab-
-  http_logger: ^1.0.0
+  http_logger: any
 
 dev_dependencies:
   flutter_test:
