allow any version of http libs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,9 @@ dependencies:
   #https://pub.dev/packages/collection#-changelog-tab-
   collection: ^1.14.11
   #https://pub.dev/packages/http_middleware#-changelog-tab-
-  http_middleware: ^1.0.0
+  http_middleware: any
   #https://pub.dev/packages/http_logger#-changelog-tab-
-  http_logger: ^1.0.0
+  http_logger: any
 
 dev_dependencies:
   flutter_test:
